@@ -2,6 +2,9 @@
 - Bugfix: Added missing closing li tag to the expandableChild
   template.
 - Bugfix: The fe configuration does not update the render type.
+- Bugfix: Do not mixup and/or combine escaping for keys and/or
+  code generation.
+- Bugfix: Remove a possible warning when cleaning up old log files.
 
 3.2.2
 - Updated to PHP 7.4
